// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a filterable table 1`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          colspan="2"
        >
          Name
        </th>
        <th
          colspan="4"
        >
          Info
        </th>
      </tr>
      <tr>
        <th
          colspan="1"
        >
          First Name
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Last Name
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Age
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Visits
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Status
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Profile Progress
          <input
            placeholder="Search..."
            value=""
          />
        </th>
      </tr>
      <tr>
        <th
          colspan="6"
          style="text-align: left;"
        >
          <span>
            <input
              placeholder="Global search..."
              style="font-size: 1.1rem; border: 0px;"
              value=""
            />
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          firstName: tanner
        </td>
        <td>
          lastName: linsley
        </td>
        <td>
          age: 29
        </td>
        <td>
          visits: 100
        </td>
        <td>
          status: In Relationship
        </td>
        <td>
          progress: 50
        </td>
      </tr>
      <tr>
        <td>
          firstName: derek
        </td>
        <td>
          lastName: perkins
        </td>
        <td>
          age: 40
        </td>
        <td>
          visits: 40
        </td>
        <td>
          status: Single
        </td>
        <td>
          progress: 80
        </td>
      </tr>
      <tr>
        <td>
          firstName: joe
        </td>
        <td>
          lastName: bergevin
        </td>
        <td>
          age: 45
        </td>
        <td>
          visits: 20
        </td>
        <td>
          status: Complicated
        </td>
        <td>
          progress: 10
        </td>
      </tr>
      <tr>
        <td>
          firstName: jaylen
        </td>
        <td>
          lastName: linsley
        </td>
        <td>
          age: 26
        </td>
        <td>
          visits: 99
        </td>
        <td>
          status: In Relationship
        </td>
        <td>
          progress: 70
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`renders a filterable table 2`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          colspan="2"
        >
          Name
        </th>
        <th
          colspan="4"
        >
          Info
        </th>
      </tr>
      <tr>
        <th
          colspan="1"
        >
          First Name
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Last Name
          <input
            placeholder="Search..."
            value="l"
          />
        </th>
        <th
          colspan="1"
        >
          Age
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Visits
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Status
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Profile Progress
          <input
            placeholder="Search..."
            value=""
          />
        </th>
      </tr>
      <tr>
        <th
          colspan="6"
          style="text-align: left;"
        >
          <span>
            <input
              placeholder="Global search..."
              style="font-size: 1.1rem; border: 0px;"
              value=""
            />
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          firstName: tanner
        </td>
        <td>
          lastName: linsley
        </td>
        <td>
          age: 29
        </td>
        <td>
          visits: 100
        </td>
        <td>
          status: In Relationship
        </td>
        <td>
          progress: 50
        </td>
      </tr>
      <tr>
        <td>
          firstName: jaylen
        </td>
        <td>
          lastName: linsley
        </td>
        <td>
          age: 26
        </td>
        <td>
          visits: 99
        </td>
        <td>
          status: In Relationship
        </td>
        <td>
          progress: 70
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`renders a filterable table 3`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          colspan="2"
        >
          Name
        </th>
        <th
          colspan="4"
        >
          Info
        </th>
      </tr>
      <tr>
        <th
          colspan="1"
        >
          First Name
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Last Name
          <input
            placeholder="Search..."
            value="er"
          />
        </th>
        <th
          colspan="1"
        >
          Age
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Visits
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Status
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Profile Progress
          <input
            placeholder="Search..."
            value=""
          />
        </th>
      </tr>
      <tr>
        <th
          colspan="6"
          style="text-align: left;"
        >
          <span>
            <input
              placeholder="Global search..."
              style="font-size: 1.1rem; border: 0px;"
              value=""
            />
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          firstName: derek
        </td>
        <td>
          lastName: perkins
        </td>
        <td>
          age: 40
        </td>
        <td>
          visits: 40
        </td>
        <td>
          status: Single
        </td>
        <td>
          progress: 80
        </td>
      </tr>
      <tr>
        <td>
          firstName: joe
        </td>
        <td>
          lastName: bergevin
        </td>
        <td>
          age: 45
        </td>
        <td>
          visits: 20
        </td>
        <td>
          status: Complicated
        </td>
        <td>
          progress: 10
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`renders a filterable table 4`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          colspan="2"
        >
          Name
        </th>
        <th
          colspan="4"
        >
          Info
        </th>
      </tr>
      <tr>
        <th
          colspan="1"
        >
          First Name
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Last Name
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Age
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Visits
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Status
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Profile Progress
          <input
            placeholder="Search..."
            value=""
          />
        </th>
      </tr>
      <tr>
        <th
          colspan="6"
          style="text-align: left;"
        >
          <span>
            <input
              placeholder="Global search..."
              style="font-size: 1.1rem; border: 0px;"
              value=""
            />
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          firstName: tanner
        </td>
        <td>
          lastName: linsley
        </td>
        <td>
          age: 29
        </td>
        <td>
          visits: 100
        </td>
        <td>
          status: In Relationship
        </td>
        <td>
          progress: 50
        </td>
      </tr>
      <tr>
        <td>
          firstName: derek
        </td>
        <td>
          lastName: perkins
        </td>
        <td>
          age: 40
        </td>
        <td>
          visits: 40
        </td>
        <td>
          status: Single
        </td>
        <td>
          progress: 80
        </td>
      </tr>
      <tr>
        <td>
          firstName: joe
        </td>
        <td>
          lastName: bergevin
        </td>
        <td>
          age: 45
        </td>
        <td>
          visits: 20
        </td>
        <td>
          status: Complicated
        </td>
        <td>
          progress: 10
        </td>
      </tr>
      <tr>
        <td>
          firstName: jaylen
        </td>
        <td>
          lastName: linsley
        </td>
        <td>
          age: 26
        </td>
        <td>
          visits: 99
        </td>
        <td>
          status: In Relationship
        </td>
        <td>
          progress: 70
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`renders a filterable table 5`] = `
<DocumentFragment>
  <table>
    <thead>
      <tr>
        <th
          colspan="2"
        >
          Name
        </th>
        <th
          colspan="4"
        >
          Info
        </th>
      </tr>
      <tr>
        <th
          colspan="1"
        >
          First Name
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Last Name
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Age
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Visits
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Status
          <input
            placeholder="Search..."
            value=""
          />
        </th>
        <th
          colspan="1"
        >
          Profile Progress
          <input
            placeholder="Search..."
            value=""
          />
        </th>
      </tr>
      <tr>
        <th
          colspan="6"
          style="text-align: left;"
        >
          <span>
            <input
              placeholder="Global search..."
              style="font-size: 1.1rem; border: 0px;"
              value="li"
            />
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          firstName: tanner
        </td>
        <td>
          lastName: linsley
        </td>
        <td>
          age: 29
        </td>
        <td>
          visits: 100
        </td>
        <td>
          status: In Relationship
        </td>
        <td>
          progress: 50
        </td>
      </tr>
      <tr>
        <td>
          firstName: joe
        </td>
        <td>
          lastName: bergevin
        </td>
        <td>
          age: 45
        </td>
        <td>
          visits: 20
        </td>
        <td>
          status: Complicated
        </td>
        <td>
          progress: 10
        </td>
      </tr>
      <tr>
        <td>
          firstName: jaylen
        </td>
        <td>
          lastName: linsley
        </td>
        <td>
          age: 26
        </td>
        <td>
          visits: 99
        </td>
        <td>
          status: In Relationship
        </td>
        <td>
          progress: 70
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
